--- a/kivy_health_app/fix_my_world.kv
+++ b/kivy_health_app/fix_my_world.kv
@@ -18,16 +18,16 @@ WindowManager:
         pos_hint: {"center_x": 0.5, "center_y": 0.5}
 
         Image: 
-            source: "assets/ApplicationTrackerLogo.png"
+            source: "assets/Health_logo3.png"
 
-        Button:
-            text: "Entrance"
-            size_hint: (1, 0.5)
-            bold: True
-            background_color: "#7844E3"
-            background_normal: ""
-            on_release: 
-                root.entrance_button_behavior()
+        #Button:
+            #text: "Entrance"
+            #size_hint: (1, 0.3)
+            #bold: True
+            #background_color: "#7844E3"
+            #background_normal: ""
+            #on_release: 
+                #root.entrance_button_behavior()
                 #app.root.current = "trackerwindow"
                 #root.manager.transition.direction = "left"
 
